--- a/portifolio/portifolio.css
+++ b/portifolio/portifolio.css
@@ -333,7 +333,7 @@ img {
 
 /* ===== Exercises =====*/
 
-#exercise-section {
+.exercise-section {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -353,6 +353,18 @@ img {
     border: 1px solid #e0e0e0;
 }
 
+.class-pwfe {
+  color: var(--first-color);
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 0.8rem;
+  opacity: 0.7;
+  background-color: rgba(0, 0, 0, 0.05);
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
 .exercise-card:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
@@ -366,7 +378,7 @@ img {
     font-weight: 600;
 }
 
-.exercise-card p {
+.about-class {
     font-size: 1rem;
     color: #777;
     letter-spacing: 0.5px;
