--- a/portifolio/portifolio.css
+++ b/portifolio/portifolio.css
@@ -215,7 +215,6 @@ img {
 .home_img {
   position: absolute;
   right: 0;
-  bottom: 0;
   width: 260px;
 }
 
@@ -343,6 +342,7 @@ img {
 
 .exercise-card {
     width: 250px;
+    height: 200px;
     background-color: #fff;
     border-radius: 12px;
     padding: 30px;
@@ -351,18 +351,20 @@ img {
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
     border: 1px solid #e0e0e0;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
 .class-pwfe {
   color: var(--first-color);
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
   font-size: 0.8rem;
   opacity: 0.7;
   background-color: rgba(0, 0, 0, 0.05);
   padding: 5px 10px;
   border-radius: 5px;
+  width: 30%;
+  margin-left: auto;
 }
 
 .exercise-card:hover {
